Ibrahim DEV/src/objects/rubrique__c.object
<CustomObject>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>base2__c</fullName>
        <label>base2</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>montant__c</fullName>
        <label>montant</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>poste__c</fullName>
        <label>poste</label>
        <referenceTo>poste__c</referenceTo>
        <relationshipLabel>rubriques</relationshipLabel>
        <relationshipName>rubriques</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>rubrique</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <label>Nom de rubrique</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>rubriques</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>